Cycles Standalone not respecting integrator sample_clamp_direct #47813

Closed
opened 2016-03-16 03:33:51 +01:00 by Jeff Witthuhn · 11 comments

System Information
Windows 8.1 64-bit

Blender Version
Broken: Latest git from the Cycles standalone repository. At this commit https://developer.blender.org/rCae057c51edfc85661574b0db5cf411b5d145ffbb

Short description of error
Cycles standalone does not clamp sampled values, regardless of the integrator's sample_clamp_direct value.

Cycles does respect this value when set through the blender UI in 2.77RC2. Only cycles standalone has this issue.

Exact steps for others to reproduce the error
Attached a short xml file to reproduce this in Cycles standalone. It contains a cube with an emission shader of strength 10, and sample_clamp_direct set to 0.5. This should produce a render of a gray cube, but instead it will render white.

scene_cube_test.xml

**System Information** Windows 8.1 64-bit **Blender Version** Broken: Latest git from the Cycles standalone repository. At this commit https://developer.blender.org/rCae057c51edfc85661574b0db5cf411b5d145ffbb **Short description of error** Cycles standalone does not clamp sampled values, regardless of the integrator's sample_clamp_direct value. Cycles does respect this value when set through the blender UI in 2.77RC2. Only cycles standalone has this issue. **Exact steps for others to reproduce the error** Attached a short xml file to reproduce this in Cycles standalone. It contains a cube with an emission shader of strength 10, and sample_clamp_direct set to 0.5. This should produce a render of a gray cube, but instead it will render white. [scene_cube_test.xml](https://archive.blender.org/developer/F293239/scene_cube_test.xml)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @witthuhn

Added subscriber: @witthuhn

#48121 was marked as duplicate of this issue

#48121 was marked as duplicate of this issue

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Thomas Dinges self-assigned this 2016-03-16 16:27:15 +01:00

Will check.

Will check.
Author

I took a closer look at this and it seems the problem was that the scene's Film::use_sample_clamp must be set to true for either direct or indirect clamp to work, it defaults to false and isn't exposed through the XML api.

I took a closer look at this and it seems the problem was that the scene's Film::use_sample_clamp must be set to true for either direct or indirect clamp to work, it defaults to false and isn't exposed through the XML api.

Yes, that is the reason, but it's not clear yet to me how to properly fix this. Ideally we reshuffle some code, so setting this flag happens in /render and not in the exporter (Blender or XML).

Yes, that is the reason, but it's not clear yet to me how to properly fix this. Ideally we reshuffle some code, so setting this flag happens in /render and not in the exporter (Blender or XML).

Added subscribers: @Sergey, @esminis

Added subscribers: @Sergey, @esminis

This issue was referenced by 9604db7650

This issue was referenced by 9604db76505fb832252776810edc430c9159542a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@5722030a8e

This issue was referenced by blender/cycles@5722030a8e74996cfcea688bdb688309a1976db4
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#47813
No description provided.