Fix T47813: Cycles Standalone not respecting integrator sample_clamp_direct